# reinvent-insight

./: .env.example  .gitignore  AGENTS.md  API_SUMMARY.md  AUDIO_BUTTON_REFACTOR.md  CHANGES_SUMMARY.md  CHROME_IPAD_FIX.md  COMPLETION_REPORT.md  DEPLOY_SCRIPTS.md  DESKTOP_WIDTH_FIX.md  FRONTEND_UPDATE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  METADATA_UPDATE.md  MOBILE_FIX_SUMMARY_V2.md  QUICK_START.md  README.md  SEPARATE_BUTTONS_IMPLEMENTATION.md  SORT_BUTTON_DEMO.md  SUBTITLE_TRANSLATION_ISSUES.md  TESTING_CHECKLIST.md  TEST_SUMMARY.md  WORKER_POOL_IMPLEMENTATION.md  YOUTUBE_DOWNLOAD_ISSUE_SUMMARY.md  check-articles.sh  check_dependencies.py  clean-deploy.sh  debug_preprocessing.py  deploy-cookie-service.sh  error.html  find_xnt312_hash.py  fix-youtube-download.sh  generate_xnt312_tts.py  install_playwright_browsers.sh  install_system_deps.sh  markdown_test.md  pyproject.toml  quick_title_test.py  redeploy.sh  regenerate_tts.sh  (+16 more)
.qoder/: api-routes-check.md  bug-fix-discover-versions.md  old_workflow_backup.py  refactor-completion-report.md
config/: length_config.yaml  model_config.yaml
docs/: ADAPTIVE_LENGTH_GUIDE.md  API_COMMANDS.md  API_USAGE_GUIDE.md  COOKIE_FILE_PATHS.md  COOKIE_MANAGER_GUIDE.md  COOKIE_MANAGER_INTEGRATION.md  COOKIE_MANAGER_README.md  COOKIE_SYSTEM_QUICK_REFERENCE.md  DEEP_QUICK_INSIGHT_UI_DESIGN.md  DEPLOY_SCRIPTS.md  ENV_INDICATOR.md  MCP_CHROME_DEVTOOLS_SETUP.md  MULTI_FORMAT_SUPPORT.md  PARAGRAPH_LENGTH_CONTROL.md  PDF_CHINESE_FONT_SETUP.md  PDF_WORKFLOW_OPTIMIZATION.md  PHASE3_FIXES_SUMMARY.md  PROMPT_SYSTEM.md  QUICK_INSIGHT_API_DOCUMENTATION.md  README.md  REFACTORING_SUMMARY.md  RUN_DEV.md  STYLE_OPTIMIZATION_GUIDE.md  TEXT2HTML_PROJECT_PLAN.md  TEXT2HTML_STYLE_FIX.md  WORKER_POOL_GUIDE.md  component-progress.md  component-refactor-summary.md  cookies-refresh.md  low_thinking_implementation_summary.md  low_thinking_mode.md  refactor.md  style-cleanup-summary.md  style-dependencies.md  toast-component-decision.md  visual_prompt_complete.md
examples/: dashscope_example.py  html_to_markdown_example.py  large_html_example.py  low_thinking_example.py
prompt/: README.md  config.yaml  html_to_markdown.txt  text2html.txt  youtbe-deep-summary-adaptive.txt  youtbe-deep-summary.txt
scripts/: analyze.sh  batch_summarize.py  html_to_svg.py  install_chinese_fonts.sh  markdown_postprocess.py  migrate_document_identifier.py  regenerate_visuals.py
tests/: README_DASHSCOPE.md  README_YOUTUBE_URL_ROBUSTNESS.md  demo_paragraph_control.py  full_prompt_example.py  manual_test_chunking.py  manual_test_html_to_markdown.py  quick_test_dashscope.py  simulate_interactive_prompt.py  test_adaptive_length.py  test_adaptive_length_fixed.py  test_cookie_importer.py  test_cookie_models.py  test_cookie_store.py  test_dashscope_client.py  test_deep_research_agent.py  test_error_handling.py  (+24 more)
(+498 files in other folders)
