[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-summarizer"
version = "0.1.0"
description = "A tool to summarize YouTube video subtitles."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "questionary>=2.0.1",
    "google-generativeai>=0.5.4",
    "loguru>=0.7.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "websockets>=12.0",
    "yt-dlp",
    "markdown>=3.5.2",
    "beautifulsoup4>=4.12.3",
    "weasyprint>=60.2",
    "PyYAML>=6.0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
dev-dependencies = []
