[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reinvent-insight"
version = "0.1.0"
description = "A powerful AI-driven platform for analyzing YouTube videos, web content, and PDF documents."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "questionary>=2.0.1",
    "google-generativeai>=0.5.4",
    "loguru>=0.7.2",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "websockets>=12.0",
    "yt-dlp",
    "markdown>=3.5.2",
    "beautifulsoup4>=4.12.3",
    "weasyprint>=60.2",
    "PyYAML>=6.0.1",
    "pydantic>=2.0.0",
    "zhon>=1.1.5",
    "watchdog>=4.0.0",
    "python-multipart>=0.0.9",
    "reportlab>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
reinvent-insight = "reinvent_insight.main:cli"